unpackaged/main/default/objects/nbavs__Sound__c/nbavs__Sound__c.object-meta.xml
<CustomObject>
    <label>Sound</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sounds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>