unpackaged/main/default/objects/nbavs__Sound__c/fields/nbavs__Created__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Created__c</fullName>
    <description>Sound file Created Date Time.</description>
    <label>Created</label>
    <type>DateTime</type>
</CustomField>