unpackaged/main/default/objects/nbavs__Sound__c/fields/nbavs__Modified__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Modified__c</fullName>
    <description>Sound file modified date time.</description>
    <label>Modified</label>
    <type>DateTime</type>
</CustomField>