unpackaged/main/default/objects/nbavs__Sound__c/fields/nbavs__Size__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Size__c</fullName>
    <label>Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>