unpackaged/main/default/objects/nbavs__Sound__c/fields/nbavs__Tag__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Tag__c</fullName>
    <label>Tag</label>
    <length>64</length>
    <type>Text</type>
</CustomField>